# ch_ephem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting.yaml  sphinx.yaml  test.yaml
ch_ephem/: __init__.py  coord.py  instruments.yaml  observers.py  pointing.py  sources.py  time.py
ch_ephem/catalogs/: __init__.py
doc/: conf.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  reference.doctree
docs/.doctrees/_autosummary/: ch_ephem.catalogs.doctree  ch_ephem.coord.doctree  ch_ephem.observers.doctree  ch_ephem.pointing.doctree  ch_ephem.sources.doctree  ch_ephem.time.doctree
docs/_autosummary/: ch_ephem.catalogs.html  ch_ephem.coord.html  ch_ephem.observers.html  ch_ephem.pointing.html  ch_ephem.sources.html  ch_ephem.time.html
docs/_modules/: index.html
docs/_modules/ch_ephem/: catalogs.html  coord.html  observers.html  pointing.html  sources.html  time.html
docs/_sources/: index.rst.txt  reference.rst.txt
docs/_sources/_autosummary/: ch_ephem.catalogs.rst.txt  ch_ephem.coord.rst.txt  ch_ephem.observers.rst.txt  ch_ephem.pointing.rst.txt  ch_ephem.sources.rst.txt  ch_ephem.time.rst.txt
docs/_static/: documentation_options.js
tests/: test_coord.py  test_observers.py
