[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "ch_ephem"
authors = [
  {name = "The CHIME Collaboration", email = "dvw@phas.ubc.ca"}
]
description = "CHIME ephemeris"
requires-python = ">=3.9"
dynamic = ["readme", "version"]
license = {file = "LICENSE"}
dependencies = [
    "caput @ git+https://github.com/radiocosmology/caput.git",
    "skyfield >= 1.10",
    "numpy >= 1.16,<2",
    "pytz",
    "pyyaml",
]

[project.optional-dependencies]
test = [
  "pytest >= 7.0"
]
doc = [
    "numpydoc",
    "PyYAML",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-katex"
]

[tool.setuptools.package-data]
"ch_ephem" = ["*.yaml"]
"ch_ephem.catalogs" = ["*.json"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true
